<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="nobody">Nobody</string>
    <string name="mahjongg">Mahjongg</string>
    <string name="sum">Sum</string>
    <string name="save">Save</string>
    <string name="north">North</string>
    <string name="west">West</string>
    <string name="set">Set</string>
    <string name="points">Points</string>
    <string name="player_name">Player Name</string>
    <string name="south">South</string>
    <string name="east">East</string>
    <string name="hello">Hello World, AddScoreActivity!</string>
    <string name="app_name">Mahjongg Calculator</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>
    <string name="start_game">Start Game</string>
    <string name="add_scores">Add Scores</string>
    <string name="add_amount_each_player">Please enter an amount for each player.</string>
    <string name="select_winner">Please select the winner.</string>
    <string name="ok">Ok</string>
    <string name="set_east_player">Set East Player</string>
</resources>
