<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<TableLayout android:id="@+id/TableLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:stretchColumns="2"
	>
	<TableRow android:id="@+id/TableRow01" android:layout_width="fill_parent" android:layout_height="wrap_content">
	<TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_column="2"
		android:text="@string/player_name" android:layout_margin="5dp"
		></TextView>
	<TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/points" android:layout_margin="5dp"
		></TextView>

	<TextView android:id="@+id/TextView17" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mahjongg" android:layout_column="4" android:layout_margin="5dp"></TextView>
</TableRow>

	<TableRow android:id="@+id/TableRow01" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/east"
			android:layout_margin="5dp" android:layout_gravity="center_vertical"></TextView>
		<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 1"
			android:layout_column="2" android:layout_margin="5dp" android:onClick="onLabelClick" android:layout_gravity="center_vertical"></TextView>
		
		<TextView android:id="@+id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="999,999"></TextView><RadioButton android:id="@+id/RadioButton01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_vertical|center"></RadioButton><Button android:id="@+id/Button01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set" android:onClick="onLabelClick"></Button>
	



</TableRow>
	<TableRow android:id="@+id/TableRow01" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" android:text="@string/south" android:layout_gravity="center_vertical"></TextView>
		<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 1"
			android:layout_column="2" android:layout_margin="5dp" android:onClick="onLabelClick" android:layout_gravity="center_vertical"></TextView>
		
		<TextView android:id="@+id/TextView05" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="999,999"></TextView><RadioButton android:id="@+id/RadioButton02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_vertical|center"></RadioButton><Button android:id="@+id/Button01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set" android:onClick="onLabelClick"></Button>
	


</TableRow>
	<TableRow android:id="@+id/TableRow01" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" android:text="@string/west" android:layout_gravity="center_vertical"></TextView>
		<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 1"
			android:layout_column="2" android:layout_margin="5dp" android:onClick="onLabelClick" android:layout_gravity="center_vertical"></TextView>
		
		<TextView android:id="@+id/TextView06" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="999,999"></TextView><RadioButton android:id="@+id/RadioButton03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_vertical|center"></RadioButton><Button android:id="@+id/Button01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set" android:onClick="onLabelClick"></Button>
	


</TableRow>
	<TableRow android:id="@+id/TableRow01" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" android:text="@string/north" android:layout_gravity="center_vertical"></TextView>
		<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 1"
			android:layout_column="2" android:layout_margin="5dp" android:onClick="onLabelClick" android:layout_gravity="center_vertical"></TextView>
		
		<TextView android:id="@+id/TextView07" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="999,999"></TextView><RadioButton android:id="@+id/RadioButton04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_vertical|center"></RadioButton><Button android:id="@+id/Button01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set" android:onClick="onLabelClick"></Button>
	


</TableRow>

</TableLayout>

<TableLayout android:id="@+id/TableLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content">
<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content">
	<TextView android:layout_column="1" android:id="@+id/TextView09" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 1"></TextView>
	<TextView android:id="@+id/TextView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 2"></TextView>
	<TextView android:id="@+id/TextView11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 3"></TextView>
	<TextView android:id="@+id/TextView08" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 4"></TextView>
<TextView android:id="@+id/TextView12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sum"></TextView>
</TableRow>
<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content">
	<TextView android:id="@+id/TextView09" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 1"></TextView>
	<TextView android:id="@+id/TextView09" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 1"></TextView>
	<TextView android:id="@+id/TextView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 2"></TextView>
	<TextView android:id="@+id/TextView11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 3"></TextView>
	<TextView android:id="@+id/TextView08" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 4"></TextView>
<TextView android:id="@+id/TextView13" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="999,999"></TextView>
</TableRow>
<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content">
	<TextView android:id="@+id/TextView09" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 1"></TextView>
	<TextView android:id="@+id/TextView09" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 1"></TextView>
	<TextView android:id="@+id/TextView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 2"></TextView>
	<TextView android:id="@+id/TextView11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 3"></TextView>
	<TextView android:id="@+id/TextView08" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 4"></TextView>
<TextView android:id="@+id/TextView14" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="999,999"></TextView>
</TableRow>
<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content">
	<TextView android:id="@+id/TextView09" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 1"></TextView>
	<TextView android:id="@+id/TextView09" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 1"></TextView>
	<TextView android:id="@+id/TextView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 2"></TextView>
	<TextView android:id="@+id/TextView11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 3"></TextView>
	<TextView android:id="@+id/TextView08" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 4"></TextView>
<TextView android:id="@+id/TextView15" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="999,999"></TextView>
</TableRow>
<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content">
	<TextView android:id="@+id/TextView09" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 1"></TextView>
	<TextView android:id="@+id/TextView09" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 1"></TextView>
	<TextView android:id="@+id/TextView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 2"></TextView>
	<TextView android:id="@+id/TextView11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 3"></TextView>
	<TextView android:id="@+id/TextView08" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Player 4"></TextView>
<TextView android:id="@+id/TextView16" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="999,999"></TextView>
</TableRow>
</TableLayout>

<Button android:id="@+id/Button02" android:layout_height="wrap_content" android:text="@string/save" android:layout_width="fill_parent"></Button>

</LinearLayout>
